--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"react-scripts start\" \"json-server --watch db.json --port 8000\""
   },
   "eslintConfig": {
     "extends": [
