--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 5000;
-REACT_APP_DEV_URL = "http://localhost:8000/blogs";
+//PORT = 5000;
+//REACT_APP_DEV_URL = "http://localhost:8000/blogs";
 //REACT_APP_PROD_URL = "https://blogsapp1.herokuapp.com/blogs";
